test/fail/basic_syntax/missing_parenth.lily
#[
SyntaxError: Unexpected token 'end of file'.
    from missing_parenth.lily:6:
]#

var a: Integer = 0   a = ((a)
